Don't enable tlp services if not tlp_enable
Disable tlp for tests, systemd not available into dockers

--- a/templates/tlp.j2
+++ b/templates/tlp.j2
@@ -5,7 +5,7 @@
 # See full explanation: http://linrunner.de/en/tlp/docs/tlp-configuration.html
 
 
-{% if tlp_enable is defined and tlp_enable %}
+{% if tlp_enable %}
     TLP_ENABLE=1
 {% else %}
     TLP_ENABLE=0
